# SpatialPatternMatching3d

./: .gitignore  README.md  convert_hamburg_data.py  format_results_latex.py  generate_synthetic_data.py  main.py  pyproject.toml
examples/: default_patterns_20.json  hamburg_patterns_5.json
src/espm3d/: __init__.py  benchmark.py  convert_hamburg_data.py  format_results_latex.py  generate_synthetic_data.py  matcher.py
tests/: test_benchmark.py  test_convert_hamburg_data.py  test_format_results_latex.py  test_generate_synthetic_data.py  test_matcher.py
