[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "espm3d"
version = "0.1.0"
description = "A readable Python implementation of generalized 3-D ESPM spatial pattern matching with synthetic benchmarks."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ESPM-3D contributors"}]
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
espm3d-benchmark = "espm3d.benchmark:main"
generate-synthetic-data = "espm3d.generate_synthetic_data:main"
format-results-latex = "espm3d.format_results_latex:main"
convert-hamburg-data = "espm3d.convert_hamburg_data:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
